--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "playwrightTest",
   "main": "index.js",
   "scripts": {
-    "sitUI": "npx cross-env ENV=sit npx playwright test --project=UI --ui",
-    "sit:Headed": "npx cross-env ENV=sit npx playwright test src/tests --project=UI --headed",
-    "sit:Debug": "npx cross-env ENV=sit npx playwright test src/tests --project=UI --debug",
+    "sit_UI": "cross-env NODE_ENV==sit npx playwright test --project=UI --ui",
+    "sit_Headed": "cross-env NODE_ENV==sit npx playwright test src/tests --project=UI --headed",
+    "sit_Debug": "npx cross-env ENV=sit npx playwright test src/tests --project=UI --debug",
     "-------": "------------------- จัดการ allure report ---------------",
     "remove_allure": "rm -rf allure-results allure-reports",
     "generate_allure": "npx allure generate ./allure-results --clean -o allure-report",
     "open_allure": "npx allure open ./allure-report",
-
     "-----": "---------------------------------------------------",
     "t002": "cross-env ENV=sit npx playwright test src/tests/UI/homePage/menuAgent.spec.ts --headed && npm run generate_allure && npm run open_allure",
-    "t001": "npx cross-env ENV=sit npx playwright test src/tests/UI/homePage/home.spec.ts --debug",
-
+    "t001": "cross-env NODE_ENV==sit npx playwright test src/tests/UI/homePage/home.spec.ts --headed",
     "------": "---------------------------------------------------"
   },
   "keywords": [],
@@ -35,7 +33,8 @@
     "crypto-js": "^4.2.0",
     "csv-parse": "^5.6.0",
     "moment": "^2.30.1",
-    "playwright": "^1.49.1",
-    "rimraf": "^5.0.10"
+    "playwright": "^1.52.0",
+    "rimraf": "^5.0.10",
+    "tesseract.js": "^6.0.1"
   }
 }
