update gitignore, package.json, readme

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "playwrightTest",
   "main": "index.js",
   "scripts": {
-    "sit_UI": "cross-env NODE_ENV==sit npx playwright test --project=UI --ui",
-    "sit_Headed": "cross-env NODE_ENV==sit npx playwright test src/tests --project=UI --headed",
-    "sit_Debug": "npx cross-env ENV=sit npx playwright test src/tests --project=UI --debug",
+    "sit_ui": "cross-env NODE_ENV=sit npx playwright test --project=UI --ui",
+    "sit_headed": "cross-env NODE_ENV=sit npx playwright test src/tests --project=UI --headed",
+    "sit_debug": "npx cross-env ENV=sit npx playwright test src/tests --project=UI --debug",
     "-------": "------------------- จัดการ allure report ---------------",
     "remove_allure": "rm -rf allure-results allure-reports",
     "generate_allure": "npx allure generate ./allure-results --clean -o allure-report",
     "open_allure": "npx allure open ./allure-report",
     "-----": "---------------------------------------------------",
-    "t002": "cross-env ENV=sit npx playwright test src/tests/UI/homePage/menuAgent.spec.ts --headed && npm run generate_allure && npm run open_allure",
-    "t001": "cross-env NODE_ENV==sit npx playwright test src/tests/UI/homePage/home.spec.ts --headed",
+    "t002": "cross-env NODE_ENV=sit npx playwright test src/tests/UI/homePage/menuAgent.spec.ts --headed && npm run generate_allure && npm run open_allure",
+    "t001": "cross-env NODE_ENV=sit npx playwright test src/tests/UI/homePage/home.spec.ts --headed",
     "------": "---------------------------------------------------"
   },
   "keywords": [],
